2004-11-27  Bradley Bell  <btb@icculus.org>

	* main/inferno.c: enable logo screens for shareware/oem

2004-11-26  Bradley Bell  <btb@icculus.org>

	* main/mission.c, main/titles.c: fix d1 briefing glitches

	* main/game.c: free up cpu by not calling timer_delay so many
	times (fixes Bug 2034)

	* main/gameseq.c: enable briefing screens for mac shareware

	* 2d/bitblt.c: disable Assert so the credits work in opengl (gl
	doesn't care if it draws offscreen, I guess)

	* main/credits.c: reduce flickering in credits w/opengl

2004-11-25  Bradley Bell  <btb@icculus.org>

	* 2d/font.c: get rid of clipping in ogl_internal_string, causes
	garbage on windows for some reason.

	* 2d/font.c: fixed opengl menu font bug, caused by doing
	arithmetic on signed chars.

2004-11-23  Bradley Bell  <btb@icculus.org>

	* debian/control: depend on libsdl1.2-dev instead of libsdl-dev

2004-11-22  Bradley Bell  <btb@icculus.org>

	* configure.ac, arch/include/joy.h, arch/linux/joydefs.c,
	arch/linux/joystick.c, arch/linux/include/joystick.h,
	arch/sdl/joy.c, main/kconfig.c: Fix sdl joystick axis problem, all
	arch use global variable joy_num_axes

2004-11-19  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/gamemine.c, main/piggy.c: compile again on older C compilers
	* main/polyobj.c: don't corrupt model_data, so it can be freed properly
	* main/gameseq.c, main/mission.c, main/mission.h: for enhanced (like
	Vertigo) missions, load add-on ham file at every load, not only the 1st
	* main/bm.ch: fix bug where loading a hxm would affect other levels too
	* main/fireball.c: don't Int3() every time explosions don't look best

2004-11-16  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* arch/carbon/findfile.c: fix Mac OS 9 bug with missions > 12 chars

2004-11-14  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* arch/ogl/ogl.c: make Mac OS 9 Voodoo display textures
	* arch/ogl/ogl.c: make Mac OS X OpenGL verify textures

2004-10-30  Martin Schaffner  <maschaffner@gmx.ch>
